<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.FirstFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.studentnotes.database.NotesViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:title="@string/app_name"
                    android:titleTextColor="@color/white"
                    android:background="@color/primaryColor">
                </androidx.appcompat.widget.Toolbar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstName"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/firstName"
                    android:inputType="textCapWords"
                    android:hint="@string/john"
                    android:text="@={viewModel.firstName}"
                    android:textColorHint="@color/hintColor"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/familyName"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/familyName"
                    android:inputType="textCapWords"
                    android:hint="@string/doe"
                    android:text="@={viewModel.lastName}"
                    android:textColorHint="@color/hintColor"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Notes"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cours1"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/cours1"
                    android:inputType="number"
                    android:hint="@string/_0_100"
                    android:text="@={viewModel.course1Str}"
                    android:textColorHint="@color/hintColor"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cours2"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/cours2"
                    android:inputType="number"
                    android:hint="@string/_0_100"
                    android:text="@={viewModel.course2Str}"
                    android:textColorHint="@color/hintColor"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cours3"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/cours3"
                    android:inputType="number"
                    android:hint="@string/_0_100"
                    android:text="@={viewModel.course3Str}"
                    android:textColorHint="@color/hintColor"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cours4"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/cours4"
                    android:inputType="number"
                    android:hint="@string/_0_100"
                    android:text="@={viewModel.course4Str}"
                    android:textColorHint="@color/hintColor"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cours5"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/cours5"
                    android:inputType="number"
                    android:hint="@string/_0_100"
                    android:text="@={viewModel.course5Str}"
                    android:textColorHint="@color/hintColor"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cours6"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/cours6"
                    android:inputType="number"
                    android:hint="@string/_0_100"
                    android:text="@={viewModel.course6Str}"
                    android:textColorHint="@color/hintColor"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cours7"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/cours7"
                    android:inputType="number"
                    android:hint="@string/_0_100"
                    android:text="@={viewModel.course7Str}"
                    android:textColorHint="@color/hintColor"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"/>
            </LinearLayout>
            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/saveBtn"
                android:textColor="@color/white"/>
        </LinearLayout>

    </ScrollView>

</layout>